[workspace]
members = [
	"dev-tracker-core",
	"dev-tracker-cli",
]
default-members = ["dev-tracker-cli"]

[workspace.package]
authors = ["Keith Sharp <kms@passback.co.uk"]
description = "Tracking project development progress"
license = "AGPL-3.0-or-later"
version = "0.9.0"
edition = "2021"

[workspace.dependencies]
chrono = "0.4.26"
tokei = "12.1.2"