[package]
name = "dev-tracker-cli"
description = "A command line tool for tracking projects and activities."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "dt"
path ="./src/main.rs"

[dependencies]
anyhow = "1.0.71"
chrono.workspace = true
clap = { version = "4.3.1", features = ["derive", "env", "wrap_help"] }
dev-tracker-core = { path = "../dev-tracker-core" }
dirs = "5.0.1"
serde.workspace = true
serde_json.workspace = true
