[package]
name = "dev-tracker-core"
description = "Core data persistence for dev-tracker"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
tokei.workspace = true