[package]
name = "dev-tracker-core"
description = "Core data persistence for dev-tracker"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokei.workspace = true
